--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,52 +1,35 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-button size ="default">inserir</ion-button>
     <ion-title>
-      funcionarios
+      <div style="display: flex; align-items: center;">
+        <div style="flex-grow: 1;">funcionarios</div>
+        <ion-button size="default">inserir</ion-button>
+      </div>
     </ion-title>
-  </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
 
   <ion-row class="ion-justify-content-center">
     <ion-col size="12" size-lg="8">
-        <ion-item lines="none">
-          <ion-label></ion-label>
-          <ion-searchbar size="12" size lg="6"search-icon="search-circle" placeholder="cargo"></ion-searchbar>
-        </ion-item>
-
-        <ion-item>
-          <ion-checkbox justify="end">nome</ion-checkbox></ion-item>
-        <ion-item>
-          <ion-checkbox justify="end">cargo</ion-checkbox> </ion-item>
-        <ion-item>
-          <ion-checkbox justify="end">cidade</ion-checkbox></ion-item>
-        <ion-item>
-          <ion-checkbox justify="end">telefone</ion-checkbox></ion-item>
-
-        <ion-item>
-          <ion-input label="nome:" name="email" ngModel type="text"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-input label="nome:" name="password" ngModel type="password"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-input label="nome:" name="email" ngModel type="text"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-input label="nome:" name="email" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item lines="none">
-
-          <ion-button color="light" slot="start" routerLink="/home">Voltar</ion-button>
-          <ion-button color="light" slot="end" type="submit">Cadastrar</ion-button>
-
-        </ion-item>
-
+      <ion-item lines="none">
+        <ion-label></ion-label>
+        <ion-searchbar size="12" size-lg="6" search-icon="search-circle" placeholder="cargo"></ion-searchbar>
+        <ion-col size="auto" class="ion-align-items-end">
+          <ion-checkbox slot="end"></ion-checkbox>
+          <ion-label>nome</ion-label>
+        </ion-col>
+        <ion-col size="auto" class="ion-align-items-end">
+          <ion-checkbox slot="end"></ion-checkbox>
+          <ion-label>cargo</ion-label>
+        </ion-col>
+        <ion-col size="auto" class="ion-align-items-end">
+          <ion-checkbox slot="end"></ion-checkbox>
+          <ion-label>cidade</ion-label>
+        </ion-col>
+        <ion-col size="auto" class="ion-align-items-end">
+          <ion-checkbox slot="end"></ion-checkbox>
+          <ion-label>telefone</ion-label>
+        </ion-col>
+      </ion-item>
     </ion-col>
   </ion-row>
-  </ion-content>
+</ion-content>
